[feat]add working generate workout
