# backend/internal/dto/workouts.go
@@ -18,3 +18,13 @@ type WorkoutsFilter struct {
 	CreatedAt          *time.Time
 	UpdatedAt          *time.Time
 }
+
+type GenerateWorkoutParams struct {
+	UserID         uuid.UUID
+	UserParams     *entities.UserParams
+	UserInfo       *entities.UserInfo
+	PlaceExercise  *entities.PlaceExercise
+	TypeExercise   *entities.ExerciseType
+	Level          *entities.WorkoutsLevel
+	ExercisesCount *int
+}
